# lm-astronomy

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
docker/: generate_requirements.py
docker/api/: Dockerfile  requirements.txt
docker/front/: Dockerfile
src/api/: apiCalls.js  atel.py  dataloader.py  gcn.py  main.py
src/components/EnergyCheckbox/: EnergyCheckbox.js  EnergyRange.js
src/components/Header/: Header.js
src/components/MessengerType/: MessengerType.js
src/components/ObjectSelect/: ObjectSelect.css
src/components/SearchPanel/: SearchPanel.js
src/components/TypeSelect/: TypeSelect.css  TypeSelect.js
src/data/: atel_entities.json  ffn_atel_closest_output.json  gcn_entities.json  prompts.json
src/data/ffn/1536/: object_type_state_dict_model.pt
src/data/ffn/768/: event_type_state_dict_model.pt  object_name_or_event_ID_state_dict_model.pt  object_type_state_dict_model.pt
src/data/weights/gpt2-exomachina-ft/: config.json
src/front/: package-lock.json  package.json
src/front/public/: index.html  manifest.json
src/front/src/: App.js  index.css  setupProxy.js
src/front/src/api/: apiCalls.js  apiServices.js  loadAtelRecord.js  loadGCNRecord.js  loadRecords.js
src/front/src/components/: fetchesFromAtelGCN.js  parseCoordinatesUtility.js
src/front/src/pages/: HomePage.js  index.css
src/pages/StarMapPage/: StarMapPage.js
src/scripts/: README.md  atel_crawler.py  extract_data.py  ffn_inference.py  gcn_crawler.py  gen_completions.py  requirements.txt  utils.py
src/static/: index.html
(+37 files in other folders)
